--- a/footer.css
+++ b/footer.css
@@ -8,12 +8,13 @@ footer .cont {
     padding-bottom: 20px;
 }
 footer .cont .sitemap {
-    width: 1500px;
+    width: 1300px;
     margin: 0 auto;
 }
 footer .cont .sitemap h2 {
     line-height: 70px;
-    margin: 0 70px 0 95px;
+    margin-right: 70px;
+    font-weight: 700;
 }
 footer .cont .sitemap .linklist {
     float: left;
@@ -33,7 +34,7 @@ footer .cont .sitemap .linklist .linkbox .link:first-child {
     margin-right: 5px;
     background: url("image/ico-swiper-next2.png") no-repeat;
     transform: rotate(180deg);
-    margin-top: 22px;
+    margin-top: 27px;
     opacity: 0.5;
     border: none;
 }
@@ -45,7 +46,7 @@ footer .cont .sitemap .linklist .linkbox .link:last-child {
     height: 25px;
     margin-left: 17px;
     background: url("image/ico-swiper-next2.png") no-repeat;
-    margin-top: 22px;
+    margin-top: 27px;
     opacity: 0.5;
     border: none;
 }
@@ -67,3 +68,80 @@ footer .cont .sitemap .linklist .linkbox .link#doc {
 footer .cont .sitemap .linklist .linkbox .link#on {
     background: url("image/on.jpg");
 }
+/* -------------------여기까지 footer 첫번째 라인------------------------ */
+footer .container {
+    background: rgb(249, 249, 249);
+}
+footer .container .top{
+    width: 1300px;
+    margin: 0 auto;
+    padding: 8px 0;
+    /* border: 1px solid skyblue; */
+}
+footer .container .top .foottop {
+    float: left;
+}
+footer .container .top .footleft {
+    
+}
+footer .container .top .footleft a {
+    line-height: 35px;
+    font-size: 15px;
+    margin-right: 20px;
+}
+footer .container .top .footleft a#privacy {
+    color: #000e5e;
+}
+footer .container .top .footleft a:hover {
+    font-weight: 700;
+    text-decoration: underline;
+}
+footer .container .top .footleft a#privacy {
+    font-weight: 700;
+}
+    footer .container .top .sns {
+   position: relative;
+   left: 830px;
+}
+footer .container .top .sns .frame {
+    width: 35px;
+    height: 35px;
+    border-radius: 50px;
+    margin-left: 10px;
+    /* border: 1px solid #000; */
+    float: left;
+    overflow: visible;
+    background: #ebebeb;
+    
+}
+footer .container .top .sns .frame a {
+    width: inherit;
+    height: inherit;
+    display: block;
+    /* background: #000; */
+}
+footer .container .top .sns .frame:nth-child(1) a {
+    background: url("image/logo_sns.png") no-repeat;
+    background-size: cover;
+}
+footer .container .top .sns .frame:nth-child(2) a {
+    background: url("image/logo_sns.png") no-repeat;
+    background-size: cover;
+    background-position: -35px;
+}
+footer .container .top .sns .frame:nth-child(3) a {
+    background: url("image/logo_sns.png") no-repeat;
+    background-size: cover;
+    background-position: -70px;
+}
+footer .container .top .sns .frame:nth-child(4) a {
+    background: url("image/logo_sns.png") no-repeat;
+    background-size: cover;
+    background-position: -105px;
+}
+footer .container .top .sns .frame:nth-child(5) a {
+    background: url("image/logo_sns.png") no-repeat;
+    background-size: cover;
+    background-position: -140px;
+}
+/* --------------------footer 두번째 라인------------------------- */
