--- a/footer.css
+++ b/footer.css
@@ -72,38 +72,38 @@ footer .cont .sitemap .linklist .linkbox .link#on {
 footer .container {
     background: rgb(249, 249, 249);
 }
-footer .container .top{
+footer .container .topper {
+    border-bottom: 1px solid rgba(211, 211, 211, 0.5);
+}
+footer .container .topper .top{
     width: 1300px;
     margin: 0 auto;
     padding: 8px 0;
     /* border: 1px solid skyblue; */
 }
-footer .container .top .foottop {
+footer .container .topper .top .foottop {
     float: left;
 }
-footer .container .top .footleft {
-    
-}
-footer .container .top .footleft a {
+footer .container .topper .top .footleft a {
     line-height: 35px;
     font-size: 15px;
     margin-right: 20px;
 }
-footer .container .top .footleft a#privacy {
+footer .container .topper .top .footleft a#privacy {
     color: #000e5e;
 }
-footer .container .top .footleft a:hover {
+footer .container .topper .top .footleft a:hover {
     font-weight: 700;
     text-decoration: underline;
 }
-footer .container .top .footleft a#privacy {
+footer .container .topper .top .footleft a#privacy {
     font-weight: 700;
 }
-    footer .container .top .sns {
+    footer .container .topper .top .sns {
    position: relative;
    left: 830px;
 }
-footer .container .top .sns .frame {
+footer .container .topper .top .sns .frame {
     width: 35px;
     height: 35px;
     border-radius: 50px;
@@ -114,34 +114,113 @@ footer .container .top .sns .frame {
     background: #ebebeb;
     
 }
-footer .container .top .sns .frame a {
+footer .container .topper .top .sns .frame a {
     width: inherit;
     height: inherit;
     display: block;
     /* background: #000; */
 }
-footer .container .top .sns .frame:nth-child(1) a {
+footer .container .topper .top .sns .frame:nth-child(1) a {
     background: url("image/logo_sns.png") no-repeat;
     background-size: cover;
 }
-footer .container .top .sns .frame:nth-child(2) a {
+footer .container .topper .top .sns .frame:nth-child(2) a {
     background: url("image/logo_sns.png") no-repeat;
     background-size: cover;
     background-position: -35px;
 }
-footer .container .top .sns .frame:nth-child(3) a {
+footer .container .topper .top .sns .frame:nth-child(3) a {
     background: url("image/logo_sns.png") no-repeat;
     background-size: cover;
     background-position: -70px;
 }
-footer .container .top .sns .frame:nth-child(4) a {
+footer .container .topper .top .sns .frame:nth-child(4) a {
     background: url("image/logo_sns.png") no-repeat;
     background-size: cover;
     background-position: -105px;
 }
-footer .container .top .sns .frame:nth-child(5) a {
+footer .container .topper .top .sns .frame:nth-child(5) a {
     background: url("image/logo_sns.png") no-repeat;
     background-size: cover;
     background-position: -140px;
 }
 /* --------------------footer 두번째 라인------------------------- */
+footer .container .contact {
+    width: 1300px;
+    padding-top: 15px;
+    margin: 0 auto;
+    font-size: 16px;
+}
+footer .container .contact .bottom {
+    /* border: 1px solid #000; */
+    padding-top: 5px;
+    float: left;
+}
+footer .container .contact .blank {
+    width: 20%;
+    height: 235px;
+    background: url("image/gov24.png") no-repeat left top / 115px;
+}
+footer .container .contact .callcenter1 {
+    width: 30%;
+    height: 235px;
+}
+footer .container .contact #gov24call {
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+footer .container .contact .callcenter1 #gov24callnum {
+    font-weight: 700;
+    line-height: 1.3em;
+    margin-bottom: 10px;
+}
+footer .container .contact .callcenter1 #gov24callnum #check{
+    font-weight: lighter;
+}
+footer .container .contact .callcenter1 #gov24callnum #check #n02 {
+    color: rgb(222, 2, 2);
+}
+footer .container .contact .callcenter1 .innercall {
+    color: rgb(107, 107, 107);
+    font-weight: lighter;
+}
+footer .container .contact .callcenter1 .innercall > span {
+    font-weight: 700;
+    line-height: 1.4em;
+}
+footer .container .contact .operation {
+    color: rgb(107, 107, 107);
+    font-weight: normal;
+}
+footer .container .contact .callcenter2 {
+    width: 20%;
+    height: 235px;
+}
+footer .container .contact .callcenter2 div {
+    line-height: 1.5em;
+}
+footer .container .contact .link {
+    width: 30%;
+    height: 235px;
+
+}
+footer .container .contact .link a {
+    display: block;
+    padding-bottom: 20px ;
+    background: url("image/ico-swiper-next2.png") no-repeat 360px 3px / 5px;
+}
+footer .container .contact .link a:hover {
+    font-weight: 700;
+    text-decoration: underline;
+}
+/* ---------------------footer 세번째 라인------------------------ */
+footer .container .copy {
+    font-size: 13px;
+    padding: 20px 110px 50px;
+    color: rgb(107, 107, 107);
+    float: right;
+    background: url("image/wa.png") no-repeat;
+    background-size: 65px;
+    background-position-x: 530px;
+    
+}
